<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ActivityC">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="0dp"
        android:padding="10dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/todo"

        app:srcCompat="@drawable/man" />



    <TextView
        android:id="@+id/nm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView"
        android:layout_centerHorizontal="true"
        android:textSize="24sp"
        android:layout_marginTop="0dp"
        android:text="@string/name"
        android:translationY="0dp"
        />
    <TableRow
        android:id="@+id/hr1"
        android:layout_width="match_parent"
        android:layout_below="@id/nm"
        android:layout_height="2dp"

        android:background="#444">

    </TableRow>

    <TextView
        android:id="@+id/trk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/nm"
        android:textSize="22sp"
        android:layout_marginTop="7dp"
        android:text="@string/track_android"
        android:translationY="5dp"
        />


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/textView"

        android:layout_below="@id/trk"
        android:textSize="22sp"
        android:text="@string/Country_kenya"
        android:translationY="14dp"
        />

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView"
        android:layout_alignStart="@id/email"
        android:text="@string/davidkalenggmail_com"

        android:textSize="22sp"
        android:translationY="24dp"/>


    <TextView
        android:id="@+id/phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/phone"

        android:text="@string/_245798173096"
        android:layout_below="@id/email"
        android:textSize="22sp"
        android:translationY="34dp"
        />
    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/username"

        android:text="@string/davidkaleng"
        android:textSize="22sp"
        android:layout_below="@id/phone"
        android:translationY="44dp"
        />
</RelativeLayout>
